💄 Stopped clicking selecting, minimized jumping when cycling through sort modes

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,8 @@ body {
 
 .Table table th {
   padding: 0.8rem 1rem;
+  user-select: none;
+  margin-right: 1rem;
 }
 
 .Table table td {
@@ -55,13 +57,19 @@ body {
   text-align: center;
 }
 
-.sort-up:after {
+.sort::after {
+  content: ' ';
+  padding-right: 1rem;
+  color: var(--primary-border);
+}
+
+.sort-up::after {
   content: '⏶';
   margin-left: 0.5rem;
   color: var(--primary-border);
 }
 
-.sort-down:after {
+.sort-down::after {
   content: '⏷';
   margin-left: 0.5rem;
   color: var(--primary-border);
